@@ -342,9 +342,13 @@ GSM_Error GSM_USB_Terminate(GSM_StateMachine *s)
 int GSM_USB_Read(GSM_StateMachine *s, void *buf, size_t nbytes)
 {
 	GSM_Device_USBData *d = &s->Device.Data.USB;
-	int rc, ret;
+	int rc = LIBUSB_ERROR_TIMEOUT, ret, repeat = 0;
 
-	rc = libusb_bulk_transfer(d->handle, d->ep_read, buf, nbytes, &ret, 10000);
+	while (repeat < 10 && (rc == LIBUSB_ERROR_TIMEOUT || rc == LIBUSB_ERROR_INTERRUPTED)) {
+		rc = libusb_bulk_transfer(d->handle, d->ep_read, buf, nbytes, &ret, 10000);
+		repeat++;
+		usleep(1000);
+	}
 	if (rc != 0) {
 		smprintf(s, "Failed to read from usb (%d)!\n", rc);
 		GSM_USB_Error(s, rc);
@@ -356,9 +360,13 @@ int GSM_USB_Read(GSM_StateMachine *s, void *buf, size_t nbytes)
 int GSM_USB_Write(GSM_StateMachine *s, const void *buf, size_t nbytes)
 {
 	GSM_Device_USBData *d = &s->Device.Data.USB;
-	int rc, ret;
+	int rc = LIBUSB_ERROR_TIMEOUT, ret, repeat = 0;
 
-	rc = libusb_bulk_transfer(d->handle, d->ep_write, (void *)buf, nbytes, &ret, 10000);
+	while (repeat < 10 && (rc == LIBUSB_ERROR_TIMEOUT || rc == LIBUSB_ERROR_INTERRUPTED)) {
+		rc = libusb_bulk_transfer(d->handle, d->ep_write, (void *)buf, nbytes, &ret, 10000);
+		repeat++;
+		usleep(1000);
+	}
 	if (rc != 0) {
 		smprintf(s, "Failed to write to usb (%d)!\n", rc);
 		GSM_USB_Error(s, rc);
